...

  @override
  Widget build(BuildContext context) {
    return Card(
      margin: EdgeInsets.zero,
      child: ListTile(
        key: const Key('analysis-metric-selector'),
        title: const Text('表示する時間'),
        subtitle: Text(selectedStep.label),
        trailing: const Icon(Icons.unfold_more),
        onTap: onTap,
      ),
    );
...
